# trading-with-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  engine.py  grid.py  main.py  models.py  notifications.py  positions.py  secure_config.py
app/ai/: __init__.py  decision.py  providers.py
app/exchanges/: __init__.py  base.py  ccxt_exchange.py  paper.py
app/strategies/: __init__.py  base.py  builtin.py  custom.py  indicators.py
tests/: test_ai_providers.py  test_api_errors.py  test_batch_and_simulation.py  test_ccxt_exchange.py  test_custom_strategy_and_runs.py  test_grid.py  test_market_type.py  test_pages.py  test_positions.py  test_risk_priority.py  test_strategies.py
